fixed step 1 error + added gitignore
step 1. accidentally wrote the 1st userid to all the rows in initial commit. now fix it to write the correct userid for each row.
aded gitignore to skip the dataset and the output CSV as the files are very big in size.

--- a/g36-project-step1 - data input, cleaning, pre-processing.ipynb
+++ b/g36-project-step1 - data input, cleaning, pre-processing.ipynb
@@ -38,7 +38,7 @@
     "    if file.endswith(\".txt\"):\n",
     "        data_file_list.append(file)\n",
     "# print(len(data_file_list)) #DEBUG\n",
-    "# print(data_file_list[0]) #DEBUG"
+    "# print(data_file_list) #DEBUG"
    ]
   },
   {
@@ -84,7 +84,7 @@
     "    try:\n",
     "        data.remove('')\n",
     "    except ValueError:\n",
-    "        pass     # dummy assignment\n",
+    "        pass\n",
     "    \n",
     "    # flags for Error handling\n",
     "    # need this as we remove the data lines from the list\n",
@@ -115,7 +115,7 @@
     "        temp_timestamp_list=re.split('[:\\s]',temp_timestamp_str) # splitting timestamp based on colon(:) and white space\n",
     "        data[i].remove(temp_timestamp_str) # remove the timestamp from the list of elements of each tweet\n",
     "        data[i].insert(0, total_valid_tweets_from_user) # adding total tweet number from a user at the begining \n",
-    "        data[i].insert(0, data_file_list[0][:-4]) # adding the userid at the begining\n",
+    "        data[i].insert(0, file_name[:-4]) # adding the userid at the begining\n",
     "\n",
     "        # insert the elements of timestamp into the original list\n",
     "        for j in range(0, len(temp_timestamp_list)):\n",
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
        "4                0  2015  @wiz_teresa http://pbs.twimg.com/media/CURFqBQ...  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
