renamed the CSV output properly

--- a/g36-project-step2 - time when users are likely to be on Twitter portal.ipynb
+++ b/g36-project-step2 - time when users are likely to be on Twitter portal.ipynb
@@ -791,7 +791,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Output to CSV 1"
+    "## Output to CSV 1 with data"
    ]
   },
   {
@@ -854,7 +854,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Output CSV 2"
+    "### Output CSV 2 with normalized data"
    ]
   },
   {
